--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node prototypes/serverDB_test/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/augustluhrs/Twitch_Plays_God#readme",
   "dependencies": {
+    "lerp": "^1.0.3",
     "nedb": "^1.8.0",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "victor": "^1.1.0"
   }
 }
