food qtree test
added remove method to qtree, seems kind of buggy? but so far couldn't find any cases where two creatures ate the same food... will need to check later.

tried adding debug module, couldn't get it to work

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/augustluhrs/Twitch_Plays_God#readme",
   "dependencies": {
+    "debug": "^4.3.1",
     "lerp": "^1.0.3",
     "nedb": "^1.8.0",
     "socketio": "^1.0.0",
