added database (async), backup and load
learned about typeof and instance of, changed all ecosystem classes so can create from db load, having lots of issues with things not being defined when i need them in server (world.on, setInterval)... need to find a better flow

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^4.3.1",
     "lerp": "^1.0.3",
     "nedb": "^1.8.0",
+    "nedb-async": "^0.1.6",
     "socketio": "^1.0.0",
     "victor": "^1.1.0"
   }
