--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "homepage": "https://github.com/augustluhrs/Twitch_Plays_God#readme",
   "dependencies": {
     "debug": "^4.3.1",
+    "express": "^4.17.1",
     "lerp": "^1.0.3",
     "nedb": "^1.8.0",
     "nedb-async": "^0.1.6",
-    "socketio": "^1.0.0",
+    "socket.io": "^4.0.0",
     "victor": "^1.1.0"
   }
 }
